# Learning

./: atomic_compare.cpp  functionDecltype.cpp  initIf.cpp  overloadingBase.cpp  stdDifference.cpp  stdOptional.cpp  variadicTemplates.cpp
ModelBased/: .gitignore  CMakeLists.txt  compile.py  database.db
ModelBased/inc/: databasemanagement.h  listmodel.h  mainwindow.h  tablemodel.h
ModelBased/src/: database.db  databasemanagement.cpp  listmodel.cpp  mainwindow.cpp  tablemodel.cpp
ModelBased/ui/: mainwindow.ui
Strings/: CMakeLists.txt  main.cpp
